Fix CI jobs for podman_pod with network force
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/tests/integration/targets/podman_pod/tasks/net-pod.yml
+++ b/tests/integration/targets/podman_pod/tasks/net-pod.yml
@@ -12,6 +12,7 @@
         executable: "{{ test_executable | default('podman') }}"
         name: "{{ item }}"
         state: absent
+        force: true
       loop:
         - testnet
         - anothernet
@@ -73,6 +74,7 @@
         executable: "{{ test_executable | default('podman') }}"
         name: "{{ item }}"
         state: absent
+        force: true
       loop:
         - testnet
         - anothernet
