--- a/tests/integration/targets/podman_play/tasks/main.yml
+++ b/tests/integration/targets/podman_play/tasks/main.yml
@@ -137,6 +137,7 @@
 - name: Test play kube options
   include_tasks: play-with-options.yml
   vars:
+    ansible_python_interpreter: "/usr/bin/python"
     target_pod: web-deploy
     target_container: web-deploy-alpinex
     log_opt:
