Fix broken conmon version in CI install
Podman issue:
https://github.com/containers/podman/issues/21024

Conmon issue:
https://github.com/containers/conmon/issues/475

Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/.github/workflows/podman_pod.yml
+++ b/.github/workflows/podman_pod.yml
@@ -8,6 +8,7 @@ on:
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_pod.yml'
       - 'plugins/module_utils/podman/podman_pod_lib.py'
+      - 'plugins/module_utils/podman/common.py'
       - 'plugins/modules/podman_pod.py'
       - 'plugins/modules/podman_pod_info.py'
       - 'tests/integration/targets/podman_pod/**'
@@ -20,6 +21,7 @@ on:
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_pod.yml'
       - 'plugins/module_utils/podman/podman_pod_lib.py'
+      - 'plugins/module_utils/podman/common.py'
       - 'plugins/modules/podman_pod.py'
       - 'plugins/modules/podman_pod_info.py'
       - 'tests/integration/targets/podman_pod/**'
