--- a/tests/integration/targets/podman_secret/tasks/main.yml
+++ b/tests/integration/targets/podman_secret/tasks/main.yml
@@ -126,6 +126,24 @@
         that:
           - removed is not changed
 
+    - name: Create secret with file driver labels
+      containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
+        name: mysecret
+        data: secret content
+        driver: file
+        labels:
+          lab1: somestringhere
+          label2: "some value is there"
+          "long label": onestring
+          "boring label": "multi string value"
+
+    - name: Remove secret
+      containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
+        state: absent
+        name: mysecret
+
     - name: Create secret with file driver and custom options
       containers.podman.podman_secret:
         executable: "{{ test_executable | default('podman') }}"
@@ -214,6 +232,52 @@
               - secret_changed2 is not changed
               - skip_secret_changed is not changed
               - force_secret_changed is changed
+
+        - name: Create secret with file driver and labels
+          containers.podman.podman_secret:
+            executable: "{{ test_executable | default('podman') }}"
+            name: mysecret
+            data: secret content
+            driver: file
+            labels:
+              lab1: somestringhere
+              label2: "some value is there"
+              "long label": onestring
+              "boring label": "multi string value"
+          register: secretlabels
+
+        - name: Create secret with file driver and labels again
+          containers.podman.podman_secret:
+            executable: "{{ test_executable | default('podman') }}"
+            name: mysecret
+            data: secret content
+            driver: file
+            labels:
+              lab1: somestringhere
+              label2: "some value is there"
+              "long label": onestring
+              "boring label": "multi string value"
+          register: secretlabels2
+
+        - name: Create secret with file driver and different labels
+          containers.podman.podman_secret:
+            executable: "{{ test_executable | default('podman') }}"
+            name: mysecret
+            data: secret content
+            driver: file
+            labels:
+              lab1: somestringhere
+              label2: "some value is not there"
+              "long label": onestring
+              "boring label": "multi string value"
+          register: secretlabels3
+
+        - name: Check labels changes
+          assert:
+            that:
+              - secretlabels is changed
+              - secretlabels2 is not changed
+              - secretlabels3 is changed
 
     - name: Remove secret
       containers.podman.podman_secret:
