Added --log-opt: max_file option to podman_play.py

--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_all.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_all.yml
@@ -177,6 +177,7 @@
     log_opt:
       path: /tmp/container3.log
       max_size: 100mb
+      max_file: '10'
       tag: sometag
     command: 1h
 
