--- a/tests/integration/targets/podman_play/tasks/play-with-options.yml
+++ b/tests/integration/targets/podman_play/tasks/play-with-options.yml
@@ -44,6 +44,7 @@
         - play_container_info.containers.0.Config.Annotations["greet_to"] == "world"
         - play_container_info.containers.0.HostConfig.LogConfig["Path"] == log_opt.path
         - play_container_info.containers.0.HostConfig.LogConfig["Size"] | lower == log_opt.size
+        - play_container_info.containers.0.HostConfig.LogConfig["Size"] | lower == log_opt.file
 
   always:
 
