--- a/.github/workflows/podman_secret_info.yml
+++ b/.github/workflows/podman_secret_info.yml
@@ -1,33 +1,31 @@
-name: Podman secret
+name: Podman secret info
 
 on:
   push:
     paths:
-      - '.github/workflows/podman_secret.yml'
+      - '.github/workflows/podman_secret_info.yml'
       - 'ci/*.yml'
       - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_secret.yml'
+      - 'ci/playbooks/containers/podman_secret_info.yml'
       - 'plugins/modules/podman_secret.py'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
+      - 'plugins/modules/podman_secret_info.py'
     branches:
       - master
   pull_request:
     paths:
-      - '.github/workflows/podman_secret.yml'
+      - '.github/workflows/podman_secret_info.yml'
       - 'ci/*.yml'
       - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_secret.yml'
+      - 'ci/playbooks/containers/podman_secret_info.yml'
       - 'plugins/modules/podman_secret.py'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
+      - 'plugins/modules/podman_secret_info.py'
   schedule:
     - cron: 4 0 * * *  # Run daily at 0:03 UTC
 
 jobs:
 
-  test_podman_secret:
-    name: Podman secret ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-22.04' }}
+  test_podman_secret_info:
+    name: Podman secret info ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-22.04' }}
     runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
     defaults:
       run:
@@ -85,7 +83,7 @@ jobs:
           ~/.local/bin/ansible-galaxy collection build --output-path /tmp/just_new_collection --force
           ~/.local/bin/ansible-galaxy collection install -vvv --force /tmp/just_new_collection/*.tar.gz
 
-      - name: Run collection tests for podman secret
+      - name: Run collection tests for podman secret info
         run: |
           export PATH=~/.local/bin:$PATH
 
@@ -106,5 +104,5 @@ jobs:
           -e ansible_connection=local \
           -e setup_python=false
 
-          TEST2RUN=podman_secret ./ci/run_containers_tests.sh
+          TEST2RUN=podman_secret_info ./ci/run_containers_tests.sh
         shell: bash
